@@ -1,3 +1,7 @@
+2007-07-12  Mark Ellis <mark@mpellis.org.uk>
+
+	* added gconf schema
+
 2007-07-11  Mark Ellis <mark@mpellis.org.uk>
 
 	* added notification for device (dis)connect
